--- a/5.1940년대~1950년대.md
+++ b/5.1940년대~1950년대.md
@@ -21,7 +21,7 @@
 
 ---
 
-### 🇺🇳 UN 설립 (1945)
+### UN 설립 (1945)
 
 - **3대 가치**: 평화, 인권, 개발
 - **긴급구호 전담기구 설립**: FAO, WHO, UNICEF  
@@ -36,7 +36,7 @@
 
 ---
 
-### 🇺🇸 미국의 마셜플랜 (1948–1952)
+### 미국의 마셜플랜 (1948–1952)
 
 - 130억 달러 규모의 유럽 원조 자금
 - 유럽의 빠른 복구와 **소련 세력 확산 억제** 목적
@@ -71,7 +71,7 @@
 
 ---
 
-### 🇨🇴 콜롬보 플랜 (1951)
+### 콜롬보 플랜 (1951)
 
 - 영국·캐나다·호주 주도
 - 남아시아·동남아시아 개발도상국 경제 지원
