--- a/2.개발협력의 이해.md
+++ b/2.개발협력의 이해.md
@@ -1,6 +1,6 @@
-## 🤝 개발협력과 ODA 개념의 이해
+## 개발협력과 ODA 개념의 이해
 
-### 🌍 국제개발협력의 개념
+### 국제개발협력의 개념
 
 - **개발협력**: 개발도상국의 개발을 위한 협력 체제
   - 개발 격차 감소 / 빈곤 감소 / 경제·사회 발전 / 복지 증진
@@ -8,9 +8,9 @@
 
 ---
 
-### 💰 개발재원의 종류
+### 개발재원의 종류
 
-#### ✅ ODA의 3가지 조건
+#### ODA의 3가지 조건
 
 1. **공적기관 제공 자금**: 국민의 세금을 기반으로 운영
 2. **개도국의 경제발전 및 복지 증진 목적**  
@@ -22,7 +22,7 @@
 
 ---
 
-#### 📌 ODA(공적개발원조)의 종류
+#### ODA(공적개발원조)의 종류
 
 - **양자 ODA**: 공여국이 개도국에 직접 지원
   - **무상원조**: 상환 의무 없음
@@ -31,21 +31,21 @@
 
 ---
 
-#### 🟪 OOF (기타공적자금)의 종류
+#### OOF (기타공적자금)의 종류
 
 - 정부자금 중 ODA에 포함되지 않는 자금
 - 수출 신용/투자금융 등 **수출 촉진 목적**의 지원
 
 ---
 
-#### 🏦 민간자금 및 민간증여
+#### 민간자금 및 민간증여
 
 - **민간자금**: 시장과 동일한 조건으로 제공 (예: FDI, 1년 이상 수출신용 등)
 - **민간증여**: NGO 등이 무상 제공 (예: 학교 설립, 소득증대 사업)
 
 ---
 
-### 💡 ODA의 지원 동기 (4가지)
+### ODA의 지원 동기 (4가지)
 
 1. **인도주의적 동기**: 이타성 기반, 스칸디나비아 국가 중심
 2. **정치 외교적 동기**: 국익 추구, 국제사회 영향력 강화
@@ -68,7 +68,7 @@
 
 ---
 
-### 🏢 국제개발협력의 주체
+### 국제개발협력의 주체
 
 - **양자 원조기관**: 외교부 전담기구, 산하기관 등
 - **다자 원조기관**: 유엔, 국제개발금융기관 등
