--- a/3.국제개발협력 규모.md
+++ b/3.국제개발협력 규모.md
@@ -1,6 +1,6 @@
-## 🌐 국제개발협력의 규모와 지원 동향
+## 국제개발협력의 규모와 지원 동향
 
-### 📊 OECD DAC 회원국의 ODA 현황
+### OECD DAC 회원국의 ODA 현황
 
 - **DAC (Development Assistance Committee)**  
 - 2021년 기준 ODA 총액: **1789억 달러**
@@ -22,16 +22,16 @@
 
 ---
 
-### 📈 ODA 지원 동향
+### ODA 지원 동향
 
-#### 🛢️ 1970년대: 오일쇼크 (1973–1974)
+####  1970년대: 오일쇼크 (1973–1974)
 - 공여국들의 경제적 어려움 → ODA 증액 어려움
 
-#### 💤 1990년대: 원조 피로 현상 (Aid Fatigue, 1990)
+#### 1990년대: 원조 피로 현상 (Aid Fatigue, 1990)
 - 구소련 붕괴 (1991) 이후 냉전체제 해체
 - 원조 필요성에 대한 회의 증가 → ODA 규모 감소
 
-#### 🌍 2000년대: MDGs 선언 및 글로벌 경제위기
+#### 2000년대: MDGs 선언 및 글로벌 경제위기
 - **MDGs (Millennium Development Goals, 2000)**  
   - UN 총회에서 189개국 정상 합의  
   - 2015년까지 세계 빈곤을 절반으로 줄이는 것이 목표
@@ -42,7 +42,7 @@
   - 성과중심관리 (Results-based management)  
   - 상호책무성 (Mutual accountability)
 
-#### 💶 2010년대: 유로존 재정위기 및 SDGs 채택
+#### 2010년대: 유로존 재정위기 및 SDGs 채택
 - **유로존 재정위기 (2011–2012)**  
   - 그리스, 아일랜드, 스페인, 포르투갈 등 연쇄적 재정위기
 - **SDGs (Sustainable Development Goals, 2015)**  
