--- a/4.국제개발협력 성과.md
+++ b/4.국제개발협력 성과.md
@@ -1,6 +1,6 @@
-## 📈 국제개발협력의 성과와 과제
+## 국제개발협력의 성과와 과제
 
-### ✅ 국제개발협력의 성과
+### 국제개발협력의 성과
 
 > 지난 60년 동안 국제개발협력의 주요 성과
 
@@ -13,7 +13,7 @@
 - **15세 이상 성인 문맹률 감소**  
 - **식량 생산 및 소비 신장률 증가**
 
-#### ⚠️ 성과에 대한 비판
+####  성과에 대한 비판
 
 - 절대 빈곤 감소의 상당 부분은 **중국, 인도의 경제 성장 영향**
 - 아프리카는 세계화 이후 **세계무역 점유율 감소**  
@@ -22,15 +22,15 @@
 
 ---
 
-### 🚧 국제개발협력의 과제
+### 국제개발협력의 과제
 
-#### 🔹 더 많은 원조 (More Aid)
+#### 더 많은 원조 (More Aid)
 
 - ODA(공적개발원조) **지속적 확대 필요**
 - **다양하고 창의적인 개발재원 확보**  
   - 국제개발채권 / 탄소세 / 외환거래세 / 국제복권 / 임팩트 투자(역량투자)
 
-#### 🔹 더 나은 원조 (Better Aid)
+#### 더 나은 원조 (Better Aid)
 
 > 원조의 효율적 관리로 효과 극대화
 
@@ -39,14 +39,14 @@
   - **원조기관 간 정책 조화**
   - **객관적 평가**를 통한 투명성 확보
 
-##### 📌 추진 방안
+##### 추진 방안
 
 - 수원국의 **필요와 수요 충족**
 - **기회 균등** 촉진
 - **포용적·참여적** 방식 추진
 - **지속가능한 발전**에 기여
 
-##### 📌 세부 방안
+##### 세부 방안
 
 - 수원국의 **거버넌스 시스템 향상 및 역량 강화** 지원
 - **부정부패 해소**를 통한 경제·사회 효율 제고
