--- a/5.1940년대~1950년대.md
+++ b/5.1940년대~1950년대.md
@@ -1,19 +1,19 @@
-## 🌍 1940년대~1950년대: 국제개발협력의 태동
+## 1940년대~1950년대: 국제개발협력의 태동
 
-### 🕊️ 국제개발협력의 역사적 배경
+### 국제개발협력의 역사적 배경
 
 - 국가협력의 역사: 상호 공감과 협력의 영역 확대의 기록  
 - 다양한 문제 해결 및 과제 공동 대응  
 
 ---
 
-### 🌐 제2차 세계대전 이후 국제개발 시작
+### 제2차 세계대전 이후 국제개발 시작
 
 - 전쟁 피해 지역에 대한 구호와 복구 지원 움직임
 - 독립한 개발도상국의 빈곤 해결을 위한 국제사회의 공동 책임 강조
 - 냉전의 영향으로 **원조 경쟁** 발생 (외교적 지지 확보 목적)
 
-#### 📌 유엔구제부흥기관 (UNRRA)
+#### 유엔구제부흥기관 (UNRRA)
 - 국민소득의 1% 상당 원조 제공 → 선진국 부담 기준
 - 이후:
   - **국제난민기구(IRO)** 설립 →  
@@ -29,7 +29,7 @@
 
 ---
 
-### 💰 경제협력 및 금융기관 창설
+### 경제협력 및 금융기관 창설
 
 - **국제부흥개발은행 (IBRD)**, **국제통화기금 (IMF)** 설립 (1945)
 - **브레튼우즈 협정 (1944)**: 달러화를 중심으로 한 국제통화 질서 형성
@@ -46,7 +46,7 @@
 
 ---
 
-### 🌏 소련의 대응: 몰로토프 플랜
+### 소련의 대응: 몰로토프 플랜
 
 - 마셜플랜에 대항
 - 미국 경제 지배에 반대하며 공산권 결속
@@ -54,7 +54,7 @@
 
 ---
 
-### 🛡️ 1949년 국제정세 변화
+### 1949년 국제정세 변화
 
 - **NATO (북대서양조약기구)**: 미국과 서유럽 중심
 - **COMECON (경제상호원조회의)**: 공산권 경제협력기구  
@@ -62,7 +62,7 @@
 
 ---
 
-### 📈 1950년대 미국의 신생 독립국 원조
+### 1950년대 미국의 신생 독립국 원조
 
 - **Point Four Program** (트루먼 대통령)
   - 기술 지원 및 경제 원조 프로그램
@@ -78,12 +78,12 @@
 
 ---
 
-### 🌏 아시아-아프리카 신생 독립국의 부상
+### 아시아-아프리카 신생 독립국의 부상
 
 - 상호 긴밀한 관계 유지
 - **냉전 중립 선언** 추구
 
-#### 📌 제1차 아시아-아프리카 회의 (반둥회의, 1955)
+#### 제1차 아시아-아프리카 회의 (반둥회의, 1955)
 
 - **반둥 10원칙** 발표
 - **비동맹 그룹 (29개국)** 형성
